syntax = "proto3";

package flow;

// The service definition.
service LintProto {
  // Sends lint
  rpc SendLint (LintRequest) returns (LintReply) {}
}

// The request message.
message LintRequest {
  string message = 1;
}

// The response message.
message LintReply {
  string message = 1;
}
